--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,64 @@
+@import "normalize";
 @import "utils";
 @import "fonts";
-@import "typography";
+@import "header";
+@import "about";
+@import "features";
+@import "advantages";
+@import "testimonials";
+@import "team";
+@import "questionsAndAnswers";
+@import "video";
+@import "ourWork";
+@import "blog";
+@import "partners";
+@import "footer";
 
 body {
-  background: $c-gray;
+  // font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.page {
+  overflow: hidden;
+
+}
+
+.container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+
+  @media (max-width: 450px) {
+    padding: 0 10px;
+  }
+}
+
+.title {
+  text-align: center;
+  margin-bottom: $margin-60;
+  font-size: 45px;
+  line-height: 60px;
+  color: #333;
+
+  @media (max-width: 450px) {
+    font-size: 30px;
+    line-height: 45px;
+    margin-bottom: $margin-60 / 2;
+  }
+}
+
+.title-text {
+  font-size: 20px;
+  line-height: 34px;
+  font-weight: 700;
+  margin-bottom: $margin-60;
+  color: #333;
+  text-align: center;
+
+  @media (max-width: 450px) {
+    font-size: 16px;
+    line-height: 26px;
+    margin-bottom: $margin-60 / 2;
+  }
 }
