--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,8 +1,6 @@
 @font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
+  font-family: "Lato";
+  src: url("../fonts/Lato-Regular.woff") format("woff");
 }
 
 @font-face {
