--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@
 @import "footer";
 
 body {
-  // font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Lato', Arial, sans-serif;
 }
 
 .page {
